streamanalyzer/streamanalyzer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamanalyzer
  namespace: stream-analyzer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamanalyzer
      version: "v1"
  template:
    metadata:
      labels:
        app: streamanalyzer
        version: "v1"
    spec:
      containers:
      - name: streamanalyzer-app
        image: streamanalyzer/applicationmanager/streamanalyzer
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /management/health
            port: http
          initialDelaySeconds: 20
          periodSeconds: 15
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /management/health
            port: http
          initialDelaySeconds: 120
