streamanalyzer/streamanalyzer-mariadb.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: streamanalyzer-mariadb
  namespace: stream-analyzer
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: streamanalyzer-mariadb
    spec:
      volumes:
      - name: data
        emptyDir: {}
      containers:
      - name: mariadb
        image: mariadb:10.3.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql/
---
apiVersion: v1
kind: Service
metadata:
  name: streamanalyzer-mariadb
  namespace: stream-analyzer
spec:
  selector:
    app: streamanalyzer-mariadb
  ports:
  - port: 3306
