streamanalyzer/streamanalyzer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: streamanalyzer
  namespace: stream-analyzer
  labels:
    app: streamanalyzer
spec:
  selector:
    app: streamanalyzer
  type: LoadBalancer
  ports:
  - name: http
    port: 8080
